--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   equatable: ^2.0.7
   connectivity_plus: ^6.1.4
   shared_preferences: ^2.5.3
-  intl: ^0.20.2
+  http: ^1.4.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^ 0.19.0
+  get: ^4.7.2
 
 dev_dependencies:
   flutter_test:
