--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,10 @@ dependencies:
     sdk: flutter
   intl: ^ 0.19.0
   get: ^4.7.2
-  fluttertoast: ^8.2.12
+  fluttertoast: any
   get_storage: ^2.1.1
+  video_player: ^2.10.0
+  chewie: ^1.12.0
   # shared_preferences: any
 
   # shared_preferences: ^2.2.2
