--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   get_storage: ^2.1.1
   video_player: ^2.10.0
   chewie: ^1.12.0
+  google_fonts: ^6.2.1
   # shared_preferences: any
 
   # shared_preferences: ^2.2.2
