--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   get: ^4.7.2
   fluttertoast: any
   get_storage: ^2.1.1
-  video_player: ^2.10.0
+  video_player: any
   chewie: ^1.12.0
   google_fonts: ^6.2.1
   # shared_preferences: any
