--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   video_player:  ^2.10.0
   chewie: ^1.12.0
   google_fonts: ^6.2.1
+  flutter_spinkit: ^5.2.1
   # shared_preferences: any
 
   # shared_preferences: ^2.2.2
