--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   chewie: ^1.12.0
   google_fonts: ^6.2.1
   flutter_spinkit: ^5.2.1
+  syncfusion_flutter_pdfviewer: ^30.1.38
   # shared_preferences: any
 
   # shared_preferences: ^2.2.2
