--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   http: ^1.4.0
   flutter_localizations:
     sdk: flutter
-  intl: ^ 0.19.0
+  intl: ^0.20.2
   get: ^4.7.2
   fluttertoast: any
   get_storage: ^2.1.1
@@ -49,6 +49,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_spinkit: ^5.2.1
   syncfusion_flutter_pdfviewer: ^30.1.38
+  image_picker: ^1.1.2
   # shared_preferences: any
 
   # shared_preferences: ^2.2.2
@@ -78,7 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/icons/
+    #  - assets/icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
