--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   http: ^1.4.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2 
   get: ^4.7.2
   fluttertoast: any
   get_storage: ^2.1.1
@@ -50,6 +50,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   syncfusion_flutter_pdfviewer: ^30.1.38
   image_picker: ^1.1.2
+  cached_network_image: ^3.4.1
   # shared_preferences: any
 
   # shared_preferences: ^2.2.2
