--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   http: ^1.4.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.20.2 
+  intl: ^0.19.0
   get: ^4.7.2
   fluttertoast: any
   get_storage: ^2.1.1
@@ -52,6 +52,8 @@ dependencies:
   image_picker: ^1.1.2
   cached_network_image: ^3.4.1
   file_picker: ^10.2.0
+  flutter_device_imei: ^0.0.4
+  permission_handler: ^11.3.0
   # shared_preferences: any
 
   # shared_preferences: ^2.2.2
