--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 gradle.ext.disableLintForLintModel = true
 
+MY_KEYSTORE_PASSWORD=houssam05
+MY_KEY_ALIAS=my-key-alias
+MY_KEY_PASSWORD=houssam05
+
+
