refactor: restructure user management screen and components - Add AllUsersScreen with search and filter functionality - Create reusable AppbarUsers and CardUsrs widgets - Update routes to reflect new file structure - Add FVM version cache and Google services configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "java.configuration.updateBuildConfiguration": "interactive",
-    "cmake.sourceDirectory": "/Users/mac/Desktop/learncosmetic/windows/runner",
-    "cSpell.words": [
-        "Usecase"
-    ]
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "cmake.sourceDirectory": "/Users/mac/Desktop/learncosmetic/windows/runner",
+  "cSpell.words": [
+    "Usecase"
+  ],
+  "dart.flutterSdkPath": "~/fvm/versions/3.32.0"
 }
